fixed small bug related to inputs and z-index

--- a/frontend/src/styles/_back-drop.scss
+++ b/frontend/src/styles/_back-drop.scss
@@ -4,6 +4,6 @@
   height: 100vh;
   left: 0;
   top: 0;
-  background: rgba(0,0,0,0.8);
-//   z-index: -10;
+  background: rgba(0, 0, 0, 0.8);
+  z-index: 10;
 }
