--- a/frontend/src/styles/_globals.scss
+++ b/frontend/src/styles/_globals.scss
@@ -119,7 +119,7 @@ a {
       padding: 0.5rem;
       font-size: 1.5rem;
       font-family: inherit;
-      z-index: -10;
+      // z-index: -10;
       &:focus,
       &:active {
         outline: none;
@@ -131,6 +131,20 @@ a {
       bottom: -3px;
       left: 0;
       font-size: 1.3rem;
+    }
+  }
+  input {
+    // position: absolute;
+    // top: 25px;
+    width: 100%;
+    padding: 1rem;
+    padding-left: 0;
+    font-size: 1.5rem;
+    font-family: inherit;
+    // z-index: -10;
+    &:focus,
+    &:active {
+      outline: none;
     }
   }
 }
