--- a/frontend/src/styles/_projects_screen.scss
+++ b/frontend/src/styles/_projects_screen.scss
@@ -2,7 +2,7 @@
   width: 100%;
   .add-container {
     width: 100%;
-    height: 20px;
+    height: 35px;
     position: relative;
     margin-bottom: 0.5rem;
     .add-container__btn {
@@ -28,7 +28,7 @@
 }
 
 .add-project-form {
-  z-index: 10;
+  z-index: 100;
   width: 90%;
   position: fixed;
   top: 50%;
@@ -48,7 +48,7 @@
       padding: 0.5rem;
       font-size: 1.5rem;
       font-family: inherit;
-      z-index: -10;
+      // z-index: -10;
       &:focus,
       &:active {
         outline: none;
